Fixed snackbar z-index

--- a/frontend/src/contexts/SnackbarProvider/Snackbars.scss
+++ b/frontend/src/contexts/SnackbarProvider/Snackbars.scss
@@ -35,4 +35,5 @@
   cursor: pointer;
   left: 50%;
   transform: translateX(-50%);
+  z-index: 101;
 }
